fix(app): fixing project bugs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
   "files": [
-    "src/styles/styled.d.ts"
+    "src/styles/themes/styled.d.ts"
   ]
 }
