--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.12",
-    "cookies-next": "^2.1.1",
-    "next": "13.0.0",
+    "cookies-next": "^5.1.0",
+    "next": "^15.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
